Fix up Range objects by detached Text.splitText

Even if a Text node has no parent node, Text.splitText should update
relevant Range objects.

The new behavior matches to the DOM standard, Edge, Firefox, and Safari.

BUG=656522

Review-Url: https://codereview.chromium.org/2831043002
Cr-Commit-Position: refs/heads/master@{#465935}

Former-commit-id: 56ba5ad05096558a36f289a24168268be4417150